# SKILL-adapter

./: .gitignore  API_REFERENCE.md  README.md  pass.md  pyproject.toml
examples/: hybrid_debug_demo.py  prepare_input_demo.py  prepare_messages_demo.py  route_demo.py
examples/retrieval_web/: app.py
skills/math/: math.md
src/skill_adapter/: __init__.py  augmentation.py  config.py  discovery.py  loading.py  models.py  parser.py  registry.py  routing.py  runtime.py  tokenizer.py
src/skill_adapter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_bge_m3_retrieval.py  test_discovery.py  test_parser.py  test_prepare.py  test_registry.py  test_retrieval.py  test_retrieval_modes.py  test_routing.py  test_tokenizer_stopwords.py  test_utils.py
tests/__pycache__/: conftest.cpython-312-pytest-7.4.4.pyc.18168  test_discovery.cpython-312-pytest-7.4.4.pyc.14560  test_discovery.cpython-312-pytest-7.4.4.pyc.18168  test_discovery.cpython-312-pytest-7.4.4.pyc.26832  test_discovery.cpython-312-pytest-7.4.4.pyc.28508  test_discovery.cpython-312-pytest-7.4.4.pyc.6088  test_discovery.cpython-312-pytest-7.4.4.pyc.6456  test_parser.cpython-312-pytest-7.4.4.pyc.16064  test_parser.cpython-312-pytest-7.4.4.pyc.18168  test_parser.cpython-312-pytest-7.4.4.pyc.26832  test_parser.cpython-312-pytest-7.4.4.pyc.28084  test_parser.cpython-312-pytest-7.4.4.pyc.6088  test_parser.cpython-312-pytest-7.4.4.pyc.6456  test_prepare.cpython-312-pytest-7.4.4.pyc.13944  test_prepare.cpython-312-pytest-7.4.4.pyc.16064  test_prepare.cpython-312-pytest-7.4.4.pyc.18168  (+7 more)
(+42 files in other folders)
